src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Donation_Page_URL__c</fullName>
        <formula>&quot;https://jsa.secure.force.com/pmtx/cmpgn__Donations?id=&quot;+ Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Donation Page URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mini_Store_URL__c</fullName>
        <formula>&quot;https://jsa.secure.force.com/pmtx/cmpgn__MiniStore?id=&quot;+ Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mini-Store URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumAccepted__c</fullName>
        <description>Number of campaign members with status equal Accepted</description>
        <label># Accepted</label>
        <summaryFilterItems>
            <field>CampaignMember.Recruitment_Phase__c</field>
            <operation>equals</operation>
            <value>Accepted</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumIntends_to_Apply__c</fullName>
        <description>Number of campaign members who intend to apply to a Summer Program</description>
        <label># Intends to Apply</label>
        <summaryFilterItems>
            <field>CampaignMember.Recruitment_Phase__c</field>
            <operation>equals</operation>
            <value>Intends to Apply</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumInterested__c</fullName>
        <description>Number of campaign members with status equal to Interested</description>
        <label># Interested</label>
        <summaryFilterItems>
            <field>CampaignMember.Recruitment_Phase__c</field>
            <operation>equals</operation>
            <value>Interested - Follow up needed</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Subscription_Page_URL__c</fullName>
        <formula>&quot;https://jsa.secure.force.com/pmtx/cmpgn__Subscriptions?id=&quot;+ Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription Page URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cmpgn__Address_Form_Heading__c</fullName>
        <inlineHelpText>Overrides the default heading displayed above the address entry form on each landing page.</inlineHelpText>
        <label>Address Form Heading</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cmpgn__Apply_Tax__c</fullName>
        <inlineHelpText>Controls the order in which sales tax is applied when calculating purchase totals.</inlineHelpText>
        <label>Apply Tax</label>
        <picklist>
            <picklistValues>
                <fullName>Before Shipping</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>After Shipping</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>cmpgn__Banner_Image__c</fullName>
        <inlineHelpText>Deprecated: Please use a Site template file to stylize this campaign landing page.</inlineHelpText>
        <label>Deprecated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cmpgn__Captcha_Theme__c</fullName>
        <description>Theme to use when displaying the CAPTCHA box in Sites.</description>
        <inlineHelpText>Theme to use when displaying the CAPTCHA box in Sites.</inlineHelpText>
        <label>Captcha Theme</label>
        <picklist>
            <picklistValues>
                <fullName>red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>white</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>blackglass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>clean</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>cmpgn__Category_Split_Name__c</fullName>
        <inlineHelpText>Name of the category split configuration to assign to each payment or recurring payment profile created using this Mini-Store add-on landing page.</inlineHelpText>
        <label>Category Split Name</label>
        <picklist>
            <picklistValues>
                <fullName>Don&apos;t Auto-Split</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>cmpgn__Checkout_Options__c</fullName>
        <inlineHelpText>Checkout options to present on the landing page.  Options vary depending on which payment processor you have assigned to the current campaign.</inlineHelpText>
        <label>Checkout Options</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>PayPal-BuyNow Button Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PayPal-SiteCheckout Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PayPal-SiteCheckout and BuyNow</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>cmpgn__Custom_Fields_Heading__c</fullName>
        <description>Sets the heading displayed above the custom field entry form on each landing page.</description>
        <inlineHelpText>Sets the heading displayed above the custom field entry form on each landing page.</inlineHelpText>
        <label>Custom Fields Heading</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cmpgn__Donation_Options__c</fullName>
        <inlineHelpText>Donation options to display on the landing page.</inlineHelpText>
        <label>Donation Options</label>
        <picklist>
            <picklistValues>
                <fullName>One Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>cmpgn__Enable_Coupons__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enables Mini-Store coupon support.  Coupons may be created in the MiniStore Coupon custom setting object.</inlineHelpText>
        <label>Enable Coupons</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cmpgn__Frequency__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Recurring billing frequency (e.g. every X months)</inlineHelpText>
        <label>Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cmpgn__Initial_Amount__c</fullName>
        <inlineHelpText>Initial, one-time amount</inlineHelpText>
        <label>Initial Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cmpgn__LP_Cancel_URL__c</fullName>
        <inlineHelpText>Page that should be displayed when the user cancels a payment.</inlineHelpText>
        <label>Payment Cancellation URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>cmpgn__LP_Confirmation_URL__c</fullName>
        <inlineHelpText>Page that should be displayed when the user completes a payment.</inlineHelpText>
        <label>Payment Confirmation Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>cmpgn__LP_Expiration_Date__c</fullName>
        <inlineHelpText>Date page is to be removed from the web</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cmpgn__LP_HTML_Content__c</fullName>
        <inlineHelpText>HTML content to display on the landing page.</inlineHelpText>
        <label>HTML Content</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cmpgn__LP_Meta_Description__c</fullName>
        <inlineHelpText>Meta description content to add to the page.</inlineHelpText>
        <label>Meta Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cmpgn__LP_Meta_Keywords__c</fullName>
        <inlineHelpText>Keywords to add to the page content.</inlineHelpText>
        <label>Keywords</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cmpgn__LP_One_Time_Contribution_Options__c</fullName>
        <label>Deprecated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cmpgn__LP_Publication_Date__c</fullName>
        <inlineHelpText>Date page is to be made available on the web</inlineHelpText>
        <label>Publication Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cmpgn__LP_Recurring_Contribution_Options__c</fullName>
        <label>Deprecated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cmpgn__LP_Status__c</fullName>
        <label>Landing Page Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archived</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>cmpgn__LP_Title__c</fullName>
        <label>Landing Page Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cmpgn__Landing_Page_Type__c</fullName>
        <label>Landing Page Type</label>
        <picklist>
            <picklistValues>
                <fullName>Mini-Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donation Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscription Page</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>cmpgn__Logo_Image__c</fullName>
        <inlineHelpText>Deprecated: Please use a Site template file to stylize this campaign landing page.</inlineHelpText>
        <label>Deprecated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cmpgn__New_Contact_Notifications__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Field deprecated.</inlineHelpText>
        <label>Deprecated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cmpgn__Number_of_Payments__c</fullName>
        <inlineHelpText>Total number of completed payments made for this campaign.</inlineHelpText>
        <label>Number of Payments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cmpgn__Occurrences__c</fullName>
        <inlineHelpText>Number of times the recurring payment should be charged.  Leave empty for open-ended subscriptions.</inlineHelpText>
        <label>Occurrences</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cmpgn__On_Payment_Completed__c</fullName>
        <inlineHelpText>Value to copy into the OnPaymentCompleted trigger field of new Payments as they are created.</inlineHelpText>
        <label>On Payment Completed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cmpgn__Payment_Notifications__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Field deprecated.</inlineHelpText>
        <label>Deprecated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cmpgn__Payments_Made__c</fullName>
        <inlineHelpText>Total of completed payments for this campaign.</inlineHelpText>
        <label>Payments Made</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cmpgn__Period__c</fullName>
        <inlineHelpText>Length of time between each recurring payment.</inlineHelpText>
        <label>Period</label>
        <picklist>
            <picklistValues>
                <fullName>Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SemiMonth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>cmpgn__Processor_Connection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Payment processor connection to use when processing payments through your campaign landing page.</inlineHelpText>
        <label>Processor Connection</label>
        <referenceTo>pymt__Processor_Connection__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cmpgn__Recurring_Amount__c</fullName>
        <inlineHelpText>Amount of each recurring payment.</inlineHelpText>
        <label>Recurring Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cmpgn__Shipping_Amount__c</fullName>
        <inlineHelpText>For shipping calculations requiring an amount.</inlineHelpText>
        <label>Shipping Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cmpgn__Shipping_Calc_Method__c</fullName>
        <inlineHelpText>Shipping calculation method.</inlineHelpText>
        <label>Shipping Calc Method</label>
        <picklist>
            <picklistValues>
                <fullName>Flat Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Amount Per Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percentage of Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weight</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>cmpgn__Shipping_Percent__c</fullName>
        <inlineHelpText>For shipping calculations requiring a percentage</inlineHelpText>
        <label>Shipping Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>cmpgn__Show_Captcha__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables a CAPTCHA box on the event site to discourage spammers and bots.</description>
        <inlineHelpText>Enables a CAPTCHA box on the event site to discourage spammers and bots.</inlineHelpText>
        <label>Show Captcha</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cmpgn__Show_Social_Links__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Display social media links on the Sites landing page.</description>
        <inlineHelpText>Display social media links on the Sites landing page.</inlineHelpText>
        <label>Show Social Links</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cmpgn__Stylesheet_URL__c</fullName>
        <inlineHelpText>Deprecated: Please use a Site template file to stylize this campaign landing page.</inlineHelpText>
        <label>Deprecated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cmpgn__Suggested_Donation_Amounts__c</fullName>
        <inlineHelpText>Semi-colon separated list of suggested contribution options to show on landing page. Decimal values for donation amounts, H or V for horizontal or vertical layout of options, and ? to display an &quot;other amount&quot; input box.</inlineHelpText>
        <label>Suggested Donation Amounts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cmpgn__Tax_Method__c</fullName>
        <inlineHelpText>Custom tax calculation method to apply as customers are redirected to checkout.</inlineHelpText>
        <label>Tax Method</label>
        <picklist>
            <picklistValues>
                <fullName>State/Province Lookup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Tax</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>cmpgn__Weight_Class__c</fullName>
        <description>Weight class to use for weight-based shipping calculations.</description>
        <inlineHelpText>Weight class to use for weight-based shipping calculations.</inlineHelpText>
        <label>Weight Class</label>
        <picklist>
            <picklistValues>
                <fullName>Grams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kilograms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pounds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ounces</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>All_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>All Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyActiveAppeals</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Appeals</label>
    </listViews>
    <recordTypes>
        <fullName>Cabinet_Committe_or_Group</fullName>
        <active>true</active>
        <description>JSA Elected and Appointed Officials or Foundation Directors Trusttees and Committees</description>
        <label>Cabinet Committe or Group</label>
    </recordTypes>
    <recordTypes>
        <fullName>FoundationEvent</fullName>
        <active>true</active>
        <description>Use this record type for Foundation events, including fundraisers</description>
        <label>Foundation Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>JSAEvent</fullName>
        <active>true</active>
        <description>Use this record type for school year and summer program events</description>
        <label>JSA Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>Summer_Recruitment</fullName>
        <active>true</active>
        <label>Summer Recruitment</label>
    </recordTypes>
    <recordTypes>
        <fullName>cmpgn__Campaign_Mini_Store</fullName>
        <active>true</active>
        <description>Modified Campaign record supporting the sale of products from a public campaign landing page using PaymentConnect.</description>
        <label>Mini-Store Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>cmpgn__Donation_Campaign</fullName>
        <active>true</active>
        <description>Modified Campaign record supporting collection of donations through Sites using PaymentConnect.</description>
        <label>Donation Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>cmpgn__Subscription_Campaign</fullName>
        <active>true</active>
        <description>Modified Campaign record supporting sale of subscriptions through Site using PaymentConnect.</description>
        <label>Subscription Campaign</label>
    </recordTypes>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>